<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/student"/>
        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="end"
            android:text="@string/totalScore"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allGifs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allGifsButton"
            android:onClick="allGifsClicked"/>

        <Button
            android:id="@+id/myDeckButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myDeckButton"
            android:onClick="myDeckClicked"/>
        <Button
            android:id="@+id/masteredButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masteredButton"
            android:onClick="masteredClicked"/>
    </LinearLayout>
    <TextView
        android:id="@+id/listTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="All Leisure Activities category signs. Click a sign to add or remove it from your deck."
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">

        <ListView
            android:id="@+id/allCategoriesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:visibility="visible">
        </ListView>
        <ListView
            android:id="@+id/categoryList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">
        </ListView>
        <ListView
            android:id="@+id/userDeckList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">
        </ListView>
        <ListView
            android:id="@+id/masteredDeckList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">
        </ListView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/practiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practiceButton"
            android:onClick="practiceClicked"/>
        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logoutButton"
            android:onClick="logout"/>
    </LinearLayout>


</LinearLayout>