<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/swipeLayout"
android:orientation="vertical"
    android:weightSum="7">

    <com.daprlabs.aaron.swipedeck.SwipeDeck
        android:id="@+id/swipe_deck"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="0dp"
        android:paddingBottom="0dp"
        swipedeck:max_visible="3"
        swipedeck:card_spacing="5dp"
        swipedeck:swipe_enabled="true"
        android:layout_weight="4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingBottom="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:paddingTop="0dp"
        android:layout_marginTop="0dp"
        android:gravity="bottom">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_weight="0.25"
            android:layout_gravity="bottom">
            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:gravity="bottom">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="0dp"
                    android:onClick="checkAnswer"
                    android:padding="0dp"
                    android:id="@+id/option1"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textSize="15dp"
                    android:textColor="#0e4402" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:onClick="checkAnswer"
                    android:layout_weight="1"
                    android:id="@+id/option2"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textSize="15dp"
                    android:textColor="#0e4402" />
            </LinearLayout>
            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:orientation="horizontal">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:onClick="checkAnswer"
                    android:layout_weight="1"
                    android:id="@+id/option3"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textSize="15dp"
                    android:textColor="#0e4402" />
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:onClick="checkAnswer"
                    android:layout_weight="1"
                    android:id="@+id/option4"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textSize="15dp"
                    android:textColor="#0e4402" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width = "match_parent"
        android:layout_weight="1">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/knowIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.72"
            android:text="@string/know_it"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="#ffffff"
            android:background="#610F44" />


        <Button
            android:id="@+id/showAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:text="@string/answer"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="#ffffff"
            android:background="#610F44" />
        <Button
            android:id="@+id/practiceIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_in_deck"
            android:layout_weight="1"
            android:layout_gravity="bottom|right"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="#ffffff"
            android:background="#610F44" />
    </LinearLayout>
    </FrameLayout>

</LinearLayout>
